Fix overlapping mobile app banner and WooCommerce button (https://github.com/woocommerce/woocommerce-admin/pull/6198)

--- a/plugins/woocommerce-admin/client/stylesheets/shared/_embed.scss
+++ b/plugins/woocommerce-admin/client/stylesheets/shared/_embed.scss
@@ -57,7 +57,6 @@
 	}
 
 	.woocommerce-layout__header {
-		height: $header-height;
 		&.is-scrolled {
 			box-shadow: 0 8px 16px 0 rgba(85, 93, 102, 0.3);
 		}
